<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/Subject"
            android:textColor="#0b0953"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/enter_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radio_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_answer1_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio1_question1" />

            <RadioButton
                android:id="@+id/radio_answer2_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio2_question1" />

            <RadioButton
                android:id="@+id/radio_answer3_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio3_question1" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/checkBox1_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox1_question2" />

        <CheckBox
            android:id="@+id/checkBox2_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox2_question2" />

        <CheckBox
            android:id="@+id/checkBox3_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox3_question2" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/radio_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_answer1_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio1_question3" />

            <RadioButton
                android:id="@+id/radio_answer2_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio2_question3" />

            <RadioButton
                android:id="@+id/radio_answer3_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio3_question3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <EditText
            android:id="@+id/edit_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/answer_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5" />

        <RadioGroup
            android:id="@+id/radio_answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_answer1_question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio1_question5" />

            <RadioButton
                android:id="@+id/radio_answer2_question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio2_question5" />

            <RadioButton
                android:id="@+id/radio_answer3_question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio3_question5" />
        </RadioGroup>

        <TextView
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6" />

        <EditText
            android:id="@+id/edit_question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/answer_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question7" />

        <CheckBox
            android:id="@+id/checkBox1_question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox1_question7" />

        <CheckBox
            android:id="@+id/checkBox2_question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox2_question7" />

        <CheckBox
            android:id="@+id/checkBox3_question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox3_question7" />

        <TextView
            android:id="@+id/question8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question8" />

        <RadioGroup
            android:id="@+id/radio_question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_answer1_question8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio1_question8" />

            <RadioButton
                android:id="@+id/radio_answer2_question8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio2_question8" />

            <RadioButton
                android:id="@+id/radio_answer3_question8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio3_question8" />
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submit"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>